Integra API com mobile aluno e totem principal
